unpackaged/main/default/objects/TSSurvey__c/fields/POP_comfortable_uploading_managing_asset__c.field-meta.xml
<CustomField>
    <fullName>POP_comfortable_uploading_managing_asset__c</fullName>
    <description>KM:  POP survey pushed from ClickTools</description>
    <inlineHelpText>After the Brightcove (POP) Publisher Onboarding Program, how would you rate the level of knowledge and understanding you now have for each of the topics below?
Uploading and Managing your Video Assets</inlineHelpText>
    <label>POP comfortable uploading managing asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>