unpackaged/main/default/objects/TSSurvey__c/fields/POP_comfortable_using_Analytics__c.field-meta.xml
<CustomField>
    <fullName>POP_comfortable_using_Analytics__c</fullName>
    <description>KM:  POP survey pushed from ClickTools</description>
    <inlineHelpText>After the Brightcove (POP) Publisher Onboarding Program, how would you rate the level of knowledge and understanding you now have for each of the topics below?
Using the Brightcove Analytics for reporting</inlineHelpText>
    <label>POP comfortable using Analytics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>