unpackaged/main/default/objects/TSSurvey__c/fields/POP_documentation_helpful__c.field-meta.xml
<CustomField>
    <fullName>POP_documentation_helpful__c</fullName>
    <description>KM:  POP survey pushed from ClickTools</description>
    <inlineHelpText>Do you feel you the documentation provided by your Onboarding Engagement Manager was helpful?</inlineHelpText>
    <label>POP documentation helpful</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>