unpackaged/main/default/objects/TSSurvey__c/fields/POP_OEM_understood_and_provide_tools__c.field-meta.xml
<CustomField>
    <fullName>POP_OEM_understood_and_provide_tools__c</fullName>
    <description>KM:  POP survey pushed from ClickTools</description>
    <inlineHelpText>Do you feel that your Onboarding Engagement Manager understood your company&#39;s video strategy and provided you the tools and training to help you achieve this?</inlineHelpText>
    <label>POP OEM understood and provide tools</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>