unpackaged/main/default/objects/TSSurvey__c/fields/PP_overall_value_of_PP__c.field-meta.xml
<CustomField>
    <fullName>PP_overall_value_of_PP__c</fullName>
    <inlineHelpText>Considering the overall value of the Platinum Support Program, would you say it is</inlineHelpText>
    <label>PP overall value of PP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceptional value, exceeding your expectations</fullName>
            </value>
            <value>
                <fullName>Good value, meeting your expectations</fullName>
            </value>
            <value>
                <fullName>Poor value, below your expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>