unpackaged/main/default/objects/TSSurvey__c/fields/PP_Platinum_CS_Rep__c.field-meta.xml
<CustomField>
    <fullName>PP_Platinum_CS_Rep__c</fullName>
    <inlineHelpText>T3 Support Rep</inlineHelpText>
    <label>PP Platinum CS Rep</label>
    <length>155</length>
    <type>Text</type>
</CustomField>