unpackaged/main/default/objects/TSSurvey__c/fields/PP_rate_CSM_responsiveness__c.field-meta.xml
<CustomField>
    <fullName>PP_rate_CSM_responsiveness__c</fullName>
    <inlineHelpText>Please rate your Customer Success Manager:
Responsiveness</inlineHelpText>
    <label>PP rate CSM responsiveness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>