unpackaged/main/default/objects/TSSurvey__c/fields/PP_rate_CSM_solutions_and_proj_mgmt__c.field-meta.xml
<CustomField>
    <fullName>PP_rate_CSM_solutions_and_proj_mgmt__c</fullName>
    <inlineHelpText>Please rate your Customer Success Manager:
Provides solution and project management with key stakeholders</inlineHelpText>
    <label>PP rate CSM solutions and proj mgmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>