unpackaged/main/default/objects/TSSurvey__c/fields/PP_rate_CSM_understands_business__c.field-meta.xml
<CustomField>
    <fullName>PP_rate_CSM_understands_business__c</fullName>
    <inlineHelpText>Please rate your Customer Success Manager:
Understands my business and goals</inlineHelpText>
    <label>PP rate CSM understands business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>