unpackaged/main/default/objects/TSSurvey__c/fields/PP_rate_T3_responsiveness__c.field-meta.xml
<CustomField>
    <fullName>PP_rate_T3_responsiveness__c</fullName>
    <inlineHelpText>Please rate your Tier 3 support rep:
Responsiveness</inlineHelpText>
    <label>PP rate T3 responsiveness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>