unpackaged/main/default/objects/TSSurvey__c/fields/PP_rate_T3_understands_my_business__c.field-meta.xml
<CustomField>
    <fullName>PP_rate_T3_understands_my_business__c</fullName>
    <inlineHelpText>Please rate your Tier 3 support rep:
Understands my business and goals</inlineHelpText>
    <label>PP rate T3 understands my business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>