unpackaged/main/default/objects/TSSurvey__c/fields/PP_Rate_team_ensuring_my_success__c.field-meta.xml
<CustomField>
    <fullName>PP_Rate_team_ensuring_my_success__c</fullName>
    <inlineHelpText>Please rate the Platinum+ team:
Dedicated to ensuring my success</inlineHelpText>
    <label>PP Rate team ensuring my success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>