unpackaged/main/default/objects/TSSurvey__c/fields/PP_rate_team_helping_achieve_goals__c.field-meta.xml
<CustomField>
    <fullName>PP_rate_team_helping_achieve_goals__c</fullName>
    <inlineHelpText>Please rate the Platinum+ team:
Helping you achieve your goals</inlineHelpText>
    <label>PP rate team helping achieve goals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>