unpackaged/main/default/objects/TSSurvey__c/fields/PP_rate_team_proactiveness__c.field-meta.xml
<CustomField>
    <fullName>PP_rate_team_proactiveness__c</fullName>
    <inlineHelpText>Please rate the Platinum+ team:
Proactiveness</inlineHelpText>
    <label>PP rate team proactiveness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>