unpackaged/main/default/objects/TSSurvey__c/fields/Product_Related__c.field-meta.xml
<CustomField>
    <fullName>Product_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Related?</label>
    <type>Checkbox</type>
</CustomField>