unpackaged/main/default/objects/TSSurvey__c/fields/Satisafaction_w_live_monitoring_overal__c.field-meta.xml
<CustomField>
    <fullName>Satisafaction_w_live_monitoring_overal__c</fullName>
    <description>How would you rate our Live Monitoring Service overall?</description>
    <inlineHelpText>How would you rate our Live Monitoring Service overall?</inlineHelpText>
    <label>Satisfaction w live monitoring overall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>