unpackaged/main/default/objects/TSSurvey__c/fields/Satisfaction_on_time_to_resolve_case__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_on_time_to_resolve_case__c</fullName>
    <inlineHelpText>How would you rate your satisfaction for the time it took to RESOLVE your case(s)?</inlineHelpText>
    <label>Satisfaction on time to resolve case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>