unpackaged/main/default/objects/TSSurvey__c/fields/Satisfaction_w_NOC_team_member__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_w_NOC_team_member__c</fullName>
    <description>How would you rate the Brightcove NOC team member with whom you worked?</description>
    <inlineHelpText>How would you rate the Brightcove NOC team member with whom you worked?</inlineHelpText>
    <label>Satisfaction w NOC team member</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>