unpackaged/main/default/objects/TSSurvey__c/fields/Satisfaction_with_professionalism__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_professionalism__c</fullName>
    <inlineHelpText>How would you rate your satisfaction with the solution specialist&#39;s courtesy and professionalism?</inlineHelpText>
    <label>Satisfaction with professionalism</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>