unpackaged/main/default/objects/TSSurvey__c/fields/Satisfaction_with_specialist_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_specialist_knowledge__c</fullName>
    <inlineHelpText>How would you rate your satisfaction with the solution specialist&#39;s understanding and technical knowledge of the case you raised?</inlineHelpText>
    <label>Satisfaction with specialist knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>