unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Article_Title__c</fullName>
    <label>Support Docs - Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>