unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Article_URL__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Article_URL__c</fullName>
    <description>Support Docs Site Survey</description>
    <label>Support Docs - Article URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>