unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_BC_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_BC_EMAIL__c</fullName>
    <label>Support Docs - BC_EMAIL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>