unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Content_Type__c</fullName>
    <label>Support Docs - Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>