unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Date_Submitted__c</fullName>
    <label>Support Docs - Date Submitted</label>
    <type>Date</type>
</CustomField>