unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Email_Address__c</fullName>
    <label>Support Docs - Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>