unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_How_Useful_Was_This_Topic__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_How_Useful_Was_This_Topic__c</fullName>
    <label>Support Docs - How Useful Was This Topic</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>