unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Node_ID__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Node_ID__c</fullName>
    <label>Support Docs - Node ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>