unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Role__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Role__c</fullName>
    <label>Support Docs - Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>