unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_SDK__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_SDK__c</fullName>
    <label>Support Docs - SDK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>