unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Technical_Enough__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Technical_Enough__c</fullName>
    <label>Support Docs - Technical Enough?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>