unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Topic__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Topic__c</fullName>
    <label>Support Docs - Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>