unpackaged/main/default/objects/TSSurvey__c/fields/Support_Docs_Was_This_Easy_to_Find__c.field-meta.xml
<CustomField>
    <fullName>Support_Docs_Was_This_Easy_to_Find__c</fullName>
    <label>Support Docs - Was This Easy to Find?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>