unpackaged/main/default/objects/TSSurvey__c/fields/Support_Package__c.field-meta.xml
<CustomField>
    <fullName>Support_Package__c</fullName>
    <label>Support Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>