unpackaged/main/default/objects/TSSurvey__c/fields/Survey_2q_Average__c.field-meta.xml
<CustomField>
    <fullName>Survey_2q_Average__c</fullName>
    <formula>IF (AND(Satisfaction_with_professionalism__c &gt; 0, Satisfaction_with_specialist_knowledge__c &gt; 0),((Satisfaction_with_professionalism__c+Satisfaction_with_specialist_knowledge__c)/2),
IF (Satisfaction_with_professionalism__c &gt; 0, Satisfaction_with_professionalism__c,
IF (Satisfaction_with_specialist_knowledge__c &gt; 0, Satisfaction_with_specialist_knowledge__c,null)))</formula>
    <label>Survey 2q Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>