unpackaged/main/default/objects/TSSurvey__c/fields/Survey_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Survey_Attempt__c</fullName>
    <description>A field that stores the number of the survey (from 1 to 3) to see if they responded to the first survey or one of the reminders.</description>
    <label>Survey Attempt</label>
    <length>1</length>
    <type>Text</type>
</CustomField>