unpackaged/main/default/objects/TSSurvey__c/fields/Survey_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Survey_Attempt_Count__c</fullName>
    <description>It informs us in which of the feedback attempt request the survey was answered. This should have values from 1 to 3.</description>
    <label>Survey Attempt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>