unpackaged/main/default/objects/TSSurvey__c/fields/survey_avg_all__c.field-meta.xml
<CustomField>
    <fullName>survey_avg_all__c</fullName>
    <formula>Survey_Average__c/90</formula>
    <label>survey avg all</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>