unpackaged/main/default/objects/TSSurvey__c/fields/Survey_Count__c.field-meta.xml
<CustomField>
    <fullName>Survey_Count__c</fullName>
    <formula>1</formula>
    <label>Survey Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>