unpackaged/main/default/objects/TSSurvey__c/fields/Survey_Score_5_pts_scale__c.field-meta.xml
<CustomField>
    <fullName>Survey_Score_5_pts_scale__c</fullName>
    <formula>IF(  CONTAINS(Name, &quot;2022&quot;)|| CONTAINS(Name, &quot;a5D8c&quot;)||  Name = &quot;NOC&quot; ||  CONTAINS(Name, &quot;GetFeedback&quot;), Survey_Average__c, (Survey_Average__c * 5)/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Score (5 pts scale)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>