unpackaged/main/default/objects/TSSurvey__c/fields/Value_of_Live_Monitoring_Package__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Live_Monitoring_Package__c</fullName>
    <description>Considering the overall value of the Live Monitoring Package, would you say it is...</description>
    <inlineHelpText>Considering the overall value of the Live Monitoring Package, would you say it is...</inlineHelpText>
    <label>Value of Live Monitoring Package</label>
    <length>50</length>
    <type>Text</type>
</CustomField>