unpackaged/main/default/objects/TSSurvey__c/fields/Voided_By__c.field-meta.xml
<CustomField>
    <fullName>Voided_By__c</fullName>
    <label>Voided By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>