unpackaged/main/default/objects/TSSurvey__c/fields/Willing_to_be_contacted_about_survey__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_be_contacted_about_survey__c</fullName>
    <inlineHelpText>Please let us know if you&#39;re willing to be contacted regarding this survey.</inlineHelpText>
    <label>Willing to be contacted about survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am willing to be contacted</fullName>
            </value>
            <value>
                <fullName>I do not wish to be contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>