unpackaged/main/default/objects/TSSurvey__c/fields/Would_you_recommend_NOC__c.field-meta.xml
<CustomField>
    <fullName>Would_you_recommend_NOC__c</fullName>
    <description>How likely are you to recommend the Live Monitoring Package?</description>
    <inlineHelpText>How likely are you to recommend the Live Monitoring Package?</inlineHelpText>
    <label>Would you recommend NOC?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>