unpackaged/main/default/objects/TSSurvey__c/fields/Zapier_Case_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Zapier_Case_Owner_s_Manager__c</fullName>
    <formula>Case__r.Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.Manager.LastName</formula>
    <label>Zapier Case Owner&#39;s Manager</label>
    <type>Text</type>
</CustomField>