unpackaged/main/default/objects/TSSurvey__c/fields/Zapier_Case_Owner_s_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Zapier_Case_Owner_s_Manager_Email__c</fullName>
    <formula>Case__r.Owner:User.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zapier Case Owner&#39;s Manager Email</label>
    <type>Text</type>
</CustomField>