unpackaged/main/default/objects/TSSurvey__c/fields/Zapier_Survey_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Zapier_Survey_Account_Name__c</fullName>
    <formula>Case__r.Account.Name</formula>
    <label>Zapier Survey Account Name</label>
    <type>Text</type>
</CustomField>