unpackaged/main/default/objects/TSSurvey__c/recordTypes/Ad_Health_Check.recordType-meta.xml
<RecordType>
    <fullName>Ad_Health_Check</fullName>
    <active>true</active>
    <description>For Ad Health Check Surveys</description>
    <label>Ad Health Check</label>
</RecordType>