unpackaged/main/default/objects/TSSurvey__c/recordTypes/ContentMigrationSurvey.recordType-meta.xml
<RecordType>
    <fullName>ContentMigrationSurvey</fullName>
    <active>true</active>
    <description>KM:  To track content migration surveys from ClickTools</description>
    <label>ContentMigrationSurvey</label>
</RecordType>