unpackaged/main/default/objects/TSSurvey__c/recordTypes/PlatinumPlus.recordType-meta.xml
<RecordType>
    <fullName>PlatinumPlus</fullName>
    <active>true</active>
    <label>Platinum+</label>
</RecordType>