unpackaged/main/default/objects/TSSurvey__c/recordTypes/Support_Documentation_Surveys.recordType-meta.xml
<RecordType>
    <fullName>Support_Documentation_Surveys</fullName>
    <active>true</active>
    <description>Captured Surveys for our public Support Documentation (Si L)</description>
    <label>Support Documentation Surveys</label>
</RecordType>