unpackaged/main/default/objects/TSSurvey__c/validationRules/Comments_for_Followup_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_for_Followup_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Follow_up_complete__c =True,
ISBLANK( Comments__c  )
)</errorConditionFormula>
    <errorMessage>You must enter comments when checking off the &quot;Follow-up Complete?&quot; check box</errorMessage>
</ValidationRule>