unpackaged/main/default/objects/TSSurvey__c/validationRules/Void_Survey_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Void_Survey_Validation</fullName>
    <active>true</active>
    <description>The user can&#39;t edit the Void Survey checkbox without adding a Void Reason.</description>
    <errorConditionFormula>AND(
  ISBLANK(Void_Reason__c),
  Void_Survey__c  = True 
)</errorConditionFormula>
    <errorMessage>The Void Reason needs to be added in order to void a survey.</errorMessage>
</ValidationRule>