unpackaged/main/default/objects/TSSurvey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case_Owner__c</columns>
    <columns>Date_Case_was_Closed__c</columns>
    <columns>Date_survey_submitted__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>survey_avg_all__c</columns>
    <columns>Survey_2q_Average__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>